# project_sesame

./: .CHANGELOG.md.kate-swp  .env.example  .gitignore  CHANGELOG.md  README.md  TODO.md
hosting/duckdns/: .gitignore  HOSTING.md  auto_update.sh.example
https-sesame/: Cargo.toml
https-sesame/src/: auth.rs  config.rs  logging.rs  main.rs  models.rs  proxy.rs  state.rs
server-sesame/: main.py
